--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^7.6.2",
     "react": "^18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -41,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.55.0"
   }
 }
